kyverno-politicas-kubernetes/pod-conforme.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-conforme
  namespace: demo-kyverno
spec:
  containers:
  - name: nginx
    image: nginx:1.27-alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
      requests:
        memory: "64Mi"
        cpu: "100m"
