kyverno-politicas-kubernetes/pod-no-conforme.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-conforme
  namespace: demo-kyverno
spec:
  containers:
  - name: nginx
    image: nginx:1.27-alpine
    # Sin bloque "resources": la policy require-resource-limits debe rechazar este Pod
